[gd_scene load_steps=25 format=3 uid="uid://dkdw4ky2ef0l0"]

[ext_resource type="Script" uid="uid://dtehumcdo2s46" path="res://scripts/player/player.gd" id="1_fm80t"]
[ext_resource type="PackedScene" uid="uid://bfvw3wavk4hu1" path="res://scenes/rope.tscn" id="2_gx1jg"]
[ext_resource type="PackedScene" uid="uid://bcxme0anknhjf" path="res://scenes/player/raider_player_model.tscn" id="3_gx1jg"]
[ext_resource type="PackedScene" uid="uid://bcoo1j0sr8myq" path="res://scenes/grapple_gun.tscn" id="3_ugbui"]
[ext_resource type="PackedScene" uid="uid://bpk810blerxw6" path="res://scenes/environment/fire_node.tscn" id="4_fcs02"]
[ext_resource type="AudioStream" uid="uid://cnhhlash564lr" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_001_23311.mp3" id="5_myrg7"]
[ext_resource type="AudioStream" uid="uid://o6y3w6mfiw1a" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_002_23312.mp3" id="6_kvlxm"]
[ext_resource type="AudioStream" uid="uid://ck715hqqxth80" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_003_23313.mp3" id="7_uf5tr"]
[ext_resource type="AudioStream" uid="uid://bvdwpk5lb7jet" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_004_23314.mp3" id="8_lgqa7"]
[ext_resource type="AudioStream" uid="uid://c010m7j4rl663" path="res://assets/audio/sfx/zapsplat_foley_footstep_single_wooden_hollow_floor_005_23315.mp3" id="9_8ydkj"]
[ext_resource type="Script" uid="uid://b0b7mmp52bsdf" path="res://scripts/player/player_state_machine.gd" id="10_3j4b4"]
[ext_resource type="Script" uid="uid://bwcswohn8boig" path="res://scripts/player/idle_player_state.gd" id="11_yj68g"]
[ext_resource type="Script" uid="uid://wiyext8p84fo" path="res://scripts/player/walking_player_state.gd" id="12_ioxgp"]
[ext_resource type="Script" uid="uid://14rvlor7niov" path="res://scripts/player/crouching_move_player_state.gd" id="14_fcs02"]
[ext_resource type="Script" uid="uid://dlc1aaugkdog2" path="res://scripts/player/jump_player_state.gd" id="14_ugbui"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_smimx"]

[sub_resource type="SphereMesh" id="SphereMesh_smehm"]
radius = 0.2
height = 0.4

[sub_resource type="SphereMesh" id="SphereMesh_ur7pv"]
radius = 1.985

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hj58k"]
random_pitch = 1.2
streams_count = 5
stream_0/stream = ExtResource("5_myrg7")
stream_1/stream = ExtResource("6_kvlxm")
stream_2/stream = ExtResource("7_uf5tr")
stream_3/stream = ExtResource("8_lgqa7")
stream_4/stream = ExtResource("9_8ydkj")

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.65, 0), Vector3(0, 0.3, 0)]
}

[sub_resource type="Animation" id="Animation_ur7pv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.8, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y4r1p"]
_data = {
&"Crouch": SubResource("Animation_smehm"),
&"RESET": SubResource("Animation_ur7pv")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_smehm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gx1jg"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
platform_floor_layers = 4294967280
script = ExtResource("1_fm80t")
rope_scene = ExtResource("2_gx1jg")
TOGGLE_CROUCH = true

[node name="RaiderPlayerModel" parent="." instance=ExtResource("3_gx1jg")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0.25)

[node name="Skeleton3D" parent="RaiderPlayerModel/Armature" index="0"]
bones/0/rotation = Quaternion(-0.707107, 3.54636e-05, 3.78107e-05, 0.707107)
bones/1/rotation = Quaternion(-0.0761809, 5.60201e-06, -5.15357e-05, 0.997094)
bones/7/rotation = Quaternion(-0.517657, -0.474736, 0.541976, -0.461431)
bones/8/rotation = Quaternion(-0.0635332, 0.12416, 0.0113354, 0.990161)
bones/9/rotation = Quaternion(-1.16462e-07, -0.250081, 1.23356e-07, 0.968225)
bones/10/rotation = Quaternion(-0.00065487, 0.202781, -0.0417133, 0.978335)
bones/11/rotation = Quaternion(0.221158, 0.0478541, 0.308679, 0.92386)
bones/12/rotation = Quaternion(0.000436189, -0.00858668, -0.104945, 0.994441)
bones/13/rotation = Quaternion(-4.99662e-06, 0.000877897, 0.149817, 0.988713)
bones/15/rotation = Quaternion(-0.00760459, -0.00552285, 0.042236, 0.999063)
bones/16/position = Vector3(0.00557195, 2.30166, -8.62542e-06)
bones/16/rotation = Quaternion(-5.15389e-07, 7.47726e-05, -0.000753357, 1)
bones/17/rotation = Quaternion(8.41125e-07, -0.00037628, -0.0034534, 0.999994)
bones/18/position = Vector3(-0.00738931, 1.239, 8.93153e-06)
bones/19/rotation = Quaternion(-0.00775656, -0.00187632, 0.0464646, 0.998888)
bones/20/rotation = Quaternion(8.09911e-07, 8.27498e-05, -0.0092788, 0.999957)
bones/21/rotation = Quaternion(-4.57445e-06, 0.000592318, 0.00163311, 0.999999)
bones/23/rotation = Quaternion(-0.007571, -0.0066104, 0.0438271, 0.998989)
bones/24/rotation = Quaternion(6.93244e-07, 0.000145589, -0.00184418, 0.999998)
bones/25/position = Vector3(0.00492625, 2.56265, 3.04451e-06)
bones/25/rotation = Quaternion(2.39335e-06, -0.000573969, -0.0063588, 0.99998)
bones/27/rotation = Quaternion(-0.00695326, -0.0212913, 0.0412896, 0.998896)
bones/28/rotation = Quaternion(-5.36429e-07, 4.03195e-06, -7.0806e-05, 1)
bones/29/rotation = Quaternion(-1.19281e-07, 3.50956e-05, -0.000548076, 1)
bones/31/rotation = Quaternion(0.529851, -0.466388, 0.532587, 0.467003)
bones/32/rotation = Quaternion(-0.063827, -0.165517, 0.00954915, 0.984093)
bones/33/rotation = Quaternion(2.39046e-07, 0.288726, 9.82751e-08, 0.957412)
bones/34/rotation = Quaternion(-0.00637618, -0.195429, 0.0308821, 0.980211)
bones/35/rotation = Quaternion(0.227437, -0.0539279, -0.286495, 0.929131)
bones/36/rotation = Quaternion(0.000548773, 0.00903034, 0.0838317, 0.996439)
bones/37/rotation = Quaternion(-2.75333e-06, 0.00022001, -0.157158, 0.987573)
bones/39/rotation = Quaternion(0.000249576, 0.000988689, -0.0278231, 0.999612)
bones/40/rotation = Quaternion(1.9074e-06, 0.000267457, -0.00208192, 0.999998)
bones/41/position = Vector3(0.00693089, 2.11802, 1.29659e-05)
bones/41/rotation = Quaternion(-8.31633e-06, 0.000910652, -0.011393, 0.999935)
bones/42/position = Vector3(-0.0229068, 1.17252, -9.34559e-06)
bones/43/rotation = Quaternion(0.000232969, 0.000604054, -0.032879, 0.999459)
bones/44/position = Vector3(-0.00752483, 2.78442, -5.95931e-06)
bones/44/rotation = Quaternion(5.41083e-07, -3.83801e-05, 0.00200165, 0.999998)
bones/45/rotation = Quaternion(-1.24995e-06, 3.66093e-05, 0.000691115, 1)
bones/47/rotation = Quaternion(0.000612269, 0.0128047, -0.032061, 0.999404)
bones/48/position = Vector3(-0.00341098, 3.18671, -4.09432e-06)
bones/48/rotation = Quaternion(-6.15155e-07, 0.000101591, -0.00082625, 1)
bones/49/rotation = Quaternion(1.41547e-06, 0.000136213, 0.00401641, 0.999992)
bones/51/rotation = Quaternion(0.000584763, 0.0123815, -0.0331514, 0.999373)
bones/52/rotation = Quaternion(9.15395e-07, -0.000141827, 0.00132124, 0.999999)
bones/53/rotation = Quaternion(-1.35112e-08, 0.000171203, 0.00368075, 0.999993)
bones/55/rotation = Quaternion(0.000163619, 0.0257398, 0.999666, -0.00220061)
bones/56/rotation = Quaternion(-0.0879533, 0.000297511, -0.00471545, 0.996113)
bones/57/rotation = Quaternion(0.508122, 0.0330383, 0.0288232, 0.860169)
bones/60/rotation = Quaternion(-0.000224479, 0.025197, 0.99968, 0.00230093)
bones/61/rotation = Quaternion(-0.0850686, -0.000286905, 0.00470525, 0.996364)
bones/62/rotation = Quaternion(0.504521, -0.0333003, -0.0287479, 0.862278)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_smimx")

[node name="WeaponRig" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="grapple_gun" parent="WeaponRig" instance=ExtResource("3_ugbui")]
transform = Transform3D(-0.102394, 0, -0.071697, 0, 0.125, 0, 0.071697, 0, -0.102394, 0.26, -0.82, 0.09)

[node name="GunTip" type="Node3D" parent="WeaponRig/grapple_gun"]
transform = Transform3D(1, 0, -8.04663e-07, 0, 1, 0, 8.04663e-07, 0, 1, -2.185, 2.84, 2.895)

[node name="MeshInstance3D" type="MeshInstance3D" parent="WeaponRig/grapple_gun/GunTip"]
mesh = SubResource("SphereMesh_smehm")

[node name="fire_node" parent="WeaponRig/grapple_gun/GunTip" instance=ExtResource("4_fcs02")]

[node name="static_flame" parent="WeaponRig/grapple_gun/GunTip/fire_node" index="0"]
visible = false

[node name="flames" parent="WeaponRig/grapple_gun/GunTip/fire_node" index="1"]
visible = false

[node name="smoke" parent="WeaponRig/grapple_gun/GunTip/fire_node" index="2"]
visible = false

[node name="Node3D" type="Node3D" parent="WeaponRig/grapple_gun"]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="WeaponRig/grapple_gun/Node3D"]
mesh = SubResource("SphereMesh_ur7pv")

[node name="key" type="Node3D" parent="WeaponRig"]

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
cull_mask = 1048559

[node name="GrappleRaycast" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -30, 0)
collide_with_areas = true

[node name="InteractionRaycast" type="RayCast3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -3.5, 0)
collision_mask = 19

[node name="FootstepAudio3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
stream = SubResource("AudioStreamRandomizer_hj58k")
volume_db = -0.5
max_db = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y4r1p")
}

[node name="ShapeCastCrouch" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_smehm")
target_position = Vector3(0, 0, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("10_3j4b4")
current_state = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_yj68g")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_ioxgp")

[node name="CrouchingMovePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_fcs02")

[node name="RunningPlayerState" type="Node" parent="PlayerStateMachine"]

[node name="JumpPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_ugbui")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_gx1jg")

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]

[editable path="RaiderPlayerModel"]
[editable path="WeaponRig/grapple_gun/GunTip/fire_node"]
